// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-textfield custom styles 1`] = `
<div
  class="m-input-style m-textfield m-textfield-stories m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            label
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            placeholder="placeholder"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield default 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Label
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
  <br />
  model value = 
</div>
`;

exports[`Storyshots modul-components|m-textfield disabled 1`] = `
<div
  class="m-input-style m-textfield m--is-disabled m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            disabled="disabled"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield error 1`] = `
<div
  class="m-input-style m-textfield m--has-error m--has-value m--is-tag-default m--is-type-tel"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            aria-invalid="true"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="tel"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield error-message 1`] = `
<div
  class="m-input-style m-textfield m--has-error m--has-value m--has-validation-message m--is-tag-default m--is-type-tel"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            aria-invalid="true"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="tel"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <p
          aria-live="polite"
          class="m-validation-message__error"
        >
          <svg
            class="m-svg m-validation-message__icon"
            height="1em"
            width="1em"
          >
            <title>
              Erreur
            </title>
          </svg>
           
          <span
            class="m-validation-message__text"
          >
            This is an Error
          </span>
        </p>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield focus 1`] = `
<div
  class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            label
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            placeholder="placeholder"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield helper-message 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--has-validation-message m--is-tag-default m--is-type-tel"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="tel"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <p
          class="m-validation-message__helper"
        >
          This message is here to help you
        </p>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield label 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            A Label
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield label-up 1`] = `
<div
  class="m-input-style m-textfield m--is-label-up m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            label
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield placeholder 1`] = `
<div
  class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Label
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            placeholder="A placeholder"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield readonly 1`] = `
<div
  class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            readonly="readonly"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield required-marker 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Label
          </span>
           
          <sup
            aria-hidden="true"
            class="m-input-style__required-marker"
          >
            *
          </sup>
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            aria-required="true"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            required="required"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield valid 1`] = `
<div
  class="m-input-style m-textfield m--is-valid m--has-value m--is-tag-default m--is-type-tel"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="tel"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield valid-message 1`] = `
<div
  class="m-input-style m-textfield m--is-valid m--has-value m--has-validation-message m--is-tag-default m--is-type-tel"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="tel"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <p
          aria-live="polite"
          class="m-validation-message__valid"
        >
          <svg
            class="m-svg m-validation-message__icon"
            height="1em"
            width="1em"
          >
            <title>
              Valide
            </title>
          </svg>
           
          <span
            class="m-validation-message__text"
          >
            This is not an Error
          </span>
        </p>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield value 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            aria-label="Hidden Label"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield waiting 1`] = `
<div
  class="m-input-style m-textfield m--is-waiting m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            readonly="readonly"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <div
            class="m-spinner m-input-style__spinner"
          >
            <!---->
             
            <div />
          </div>
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield word-wrap 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--has-word-wrap m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <!---->
             
          <textarea
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            rows="1"
          />
           
        </div>
         
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/Counter all props 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Enter a value
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="20"
              placeholder="change knobs to further test"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-character-count m-textfield__validation-character-count"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <br />
   
  <p>
    <span
      style="color: blue;"
    >
      max-length
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      20
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      character-count
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      true
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      character-count-threshold
    </span>
     is equal to  
    <span
      style="color: red;"
    >
      10
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      length-overflow
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      false
    </span>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-textfield/Counter character-count 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              placeholder="Enter a value"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-character-count m-textfield__validation-character-count"
        >
          <div
            aria-hidden="true"
            aria-live="polite"
            class="m-character-count__wrap"
          >
            <span>
              15
            </span>
            /20
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <br />
   
  <p>
    <span
      style="color: blue;"
    >
      max-length
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      "20"
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      character-count
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      true
    </span>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-textfield/Counter character-count-threshold="10" 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              placeholder="Enter a value"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-character-count m-textfield__validation-character-count"
        >
          <div
            aria-hidden="true"
            aria-live="polite"
            class="m-character-count__wrap"
          >
            <span>
              15
            </span>
            /20
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <br />
   
  <p>
    <span
      style="color: blue;"
    >
      max-length
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      "20"
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      character-count
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      true
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      character-count-threshold
    </span>
     is equal to  
    <span
      style="color: red;"
    >
      "10"
    </span>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-textfield/Counter length-overflow="true" 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              placeholder="Enter a value"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <p>
    <span
      style="color: blue;"
    >
      max-length
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      "20"
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      length-overflow
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      true
    </span>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-textfield/Counter max-length="20" 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="20"
              placeholder="Enter a value"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <p>
    <span
      style="color: blue;"
    >
      max-length
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      "20"
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      length-overflow
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      false
    </span>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-textfield/Counter max-length="200" and :word-wrap="true" 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-value m--is-tag-default m--has-word-wrap m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
               
            <textarea
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="200"
              placeholder="Enter a value"
              rows="1"
            />
             
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <p>
    <span
      style="color: blue;"
    >
      max-length
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      "200"
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      length-overflow
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      false
    </span>
  </p>
   
  <p>
    <span
      style="color: blue;"
    >
      word-wrap
    </span>
     is equal to 
    <span
      style="color: red;"
    >
      true
    </span>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width all max-width presets 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            regular
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width custom width 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 333px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            width='333px' / max-width='none'
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width large 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 896px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            large
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width medium 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 592px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            medium
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width pyramid 1`] = `
<div>
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 60px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              xs
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 60px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              xs
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 60px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              xs
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 60px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              xs
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              small
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              small
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              regular
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              regular
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 592px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              medium
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <br />
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 896px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              large
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width regular 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            regular
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width small 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            small
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/max-width x-small 1`] = `
<div
  class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 60px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            x-small
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/tag-style all tag styles 1`] = `
<div
  class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-h3 m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            h3
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type all types 1`] = `
<div
  class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            text
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            placeholder="text"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type type="email" 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-email"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="email"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type type="number" 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-number"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="number"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type type="password" 1`] = `
<div
  class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-password"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mTextfield-fakeId"
        id="fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            lsdhfasdj khgjkd fhjkghj kadfhgf jkdghdfjk ghdfjkg hdfjk ghd fjkghdj k gh djh
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="password"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <button
            aria-controls="mTextfield-fakeId"
            class="m-icon-button m-textfield__icon-password m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            title="Afficher le mot de passe"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type type="tel" 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-tel"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="tel"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type type="text" 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-text"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="text"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-textfield/type type="url" 1`] = `
<div
  class="m-input-style m-textfield m--has-value m--is-tag-default m--is-type-url"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mTextfield-fakeId"
            maxlength="Infinity"
            type="url"
          />
             
          <!---->
           
        </div>
         
        <div
          class="m-input-style__suffix"
        >
          <!---->
            
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-textfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-textfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
